item container element to fix overflow hidden on border radius and make it possible to have drag handlers overflowing the window el.

--- a/style/_window.scss
+++ b/style/_window.scss
@@ -27,7 +27,7 @@
 	}
 }
 .goui-window {
-	@extend .vbox;
+
 	@extend .z12;
 	position: fixed;
 
@@ -43,15 +43,14 @@
 	min-width: util.dp(160);
 
 
-	:first-child {
-		border-top-right-radius: util.dp(12);
-    border-top-left-radius: util.dp(12);
+	.item-container{
+		@extend .goui, .vbox;
+ 		width: 100%;
+		height: 100%;
+		overflow: hidden;
+		border-radius: util.dp(12);
 	}
 
-	:last-child {
-		border-bottom-right-radius: util.dp(12);
-    border-bottom-left-radius: util.dp(12);
-	}
 	
 	.resizer {
 		border: 0;
